svc.yml
apiVersion: v1
kind: Service
metadata:
  name: blobserver
  namespace: my-namespace
  labels:
    name: blobserver
spec:
  type: NodePort
  ports:
  - name: backend
    port: 5005
    targetPort: 5005
    nodePort: 30005  # Ensure it's within the valid range
  selector:
    app.kubernetes.io/name: blobserver
    asd
    asd
